updated package.json with respository and bugs links to github repo

--- a/package.json
+++ b/package.json
@@ -13,6 +13,15 @@
   "engines": {
     "vscode": "^1.66.0"
   },
+  "bugs": {
+    "url": "https://github.com/cypress-io/cypress-vscode-commands-search/issues",
+    "email": "deerawan@gmail.com"
+  },
+  "homepage": "https://github.com/cypress-io/cypress-vscode-commands-search",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cypress-io/cypress-vscode-commands-search"
+  },
   "categories": [
     "Other"
   ],
