added publisher name to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Search the Cypress docs for a specific command",
   "version": "0.0.1",
   "license": "MIT",
+  "published": "Cypress DX",
   "keywords": [
     "cypress",
     "docs",
